[package]
name = "tower-hyper"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
http = "0.1"
http-body = "0.1"
http-connection = { git = "https://github.com/hyperium/http-connection" }
log = "0.4"
hyper = "0.12.28"
tokio-io = "0.1"
tokio-buf = "0.1"
tokio-executor = "0.1"
tower-service = "0.2"
tower-util = "0.1"
tower-http-util = { git = "https://github.com/tower-rs/tower-http" }

[dev-dependencies]
tower = "0.1"
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tokio-tcp = "0.1"
pretty_env_logger = "0.2.0"