[package]
name = "tower-hyper"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
futures = "0.1.25"
http = "0.1"
http-body = "0.1"
http-connection = "0.1"
log = "0.4"
hyper = "0.12.29"
tokio-io = "0.1"
tokio-buf = "0.1"
tokio-executor = "0.1"
tower-service = "0.2"
tower-util = "0.1"
tower-http-util = "0.1"

[dev-dependencies]
tokio = "0.1"
tower = "0.1"
tokio-tcp = "0.1"
pretty_env_logger = "0.2.0"
