[package]
name = "tower-hyper"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tower-hyper/0.1.0/tower_http_util"
repository = "https://github.com/tower-rs/tower-hyper"
homepage = "https://github.com/tower-rs/tower-hyper"
description = """
A hyper based tower transport layer.
"""

[dependencies]
futures = "0.1.25"
http = "0.1"
http-body = "0.1"
http-connection = "0.1"
log = "0.4"
hyper = "0.12.29"
tokio-io = "0.1"
tokio-buf = "0.1"
tokio-executor = "0.1"
tower-service = "0.2"
tower-util = "0.1"
tower-http-util = "0.1"

[dev-dependencies]
tokio = "0.1.0"
tower = "0.1.0"
tokio-tcp = "0.1"
pretty_env_logger = "0.2.0"
